# conditional-orderbook-rust

./: Cargo.toml  README.MD  tarpaulin-report.html
mock-oracle/: .env  Cargo.toml
mock-oracle/src/: main.rs
orderbook/: .env  Cargo.toml
orderbook/src/: lib.rs  main.rs
orderbook/src/engine/: mod.rs
orderbook/src/entities/: order.rs  orderbook.rs
orderbook/src/errors/: mod.rs
orderbook/src/handlers/: health.rs  orders.rs
orderbook/src/oracle_service/: mod.rs
orderbook/src/repositories/: in_memory.rs  mod.rs
orderbook/src/routes/: mod.rs
orderbook/src/state/: mod.rs
orderbook/tests/: api_tests.rs
src/: main.rs
src/entities/: orderbook.rs
src/repositories/: in_memory.rs  mod.rs
src/utils/: mod.rs
tests/: api_tests.rs
